# picard-plugins-registry

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  PLUGIN_SUBMISSION.md  README.md  plugins.json  plugins.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml  validate.yml
registry_lib/: blacklist.py  cli.py  colors.py  manifest.py  plugin.py  registry.py  utils.py
registry_lib/picard/: README.md  __init__.py  constants.py  validator.py
scripts/: update_picard_files.sh
tests/: test_blacklist.py  test_cli.py  test_cli_refs.py  test_manifest.py  test_plugin.py  test_registry.py  test_utils.py  test_validator.py  test_versioning_scheme.py
