[project]
name = "picard-plugins-registry"
description = "Maintenance tools for the official Picard plugins registry"
authors = [{name = "The MusicBrainz Team"}]
license = "GPL-2.0-or-later"
requires-python = ">=3.10"
version = "1.0.0"
dependencies = [
    "requests~=2.31",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.1",
    "pytest-cov>=4.0",
    "ruff>=0.12.8",
    "pre-commit>=4.2.0",
]

[project.scripts]
registry = "registry_lib.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "E", "F", "W", "B", "I"]
ignore = ["B023", "E501", "Q"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
lines-after-imports = 2
order-by-type = true
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.uv]
default-groups = ["dev"]
package = true
